--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -35,3 +35,4 @@ This document contains R commands that you have learned, as well as a descriptio
 | `~` | Separate the left- and right-hand sides of a formula. Helps us plot one variable vs another. Will also be useful for fitting regression models (stay tuned). | `boxplot(fev$age ~ fev$smoke)` \ `plot(fev$fev ~ fev$age)` | The variable to the left of the `~` is the response variable and the variable to the right of the `~` is the explanatory variable. When used inside plotting functions, it tells us which variable goes on the y-axis (the response) and which goes on the x-axis (the explanatory). | Chapter 0 slides, slide 0.31 and 0.32 |
 | `plot` | Create a plot. | `plot(fev$fev ~ fev$age)` | Create a scatterplot of two variables, with the fev variable on the y-axis and the age variable on the x-axis.  | Chapter 0 slides, slide 0.32 | 
 | `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | 
+| `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Runs a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), and the `by=` argument specifies which variable defines the two groups we want to compare. The final argument, `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | 
