--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -37,3 +37,4 @@ This document contains R commands that you have learned, as well as a descriptio
 | `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | 
 | `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | 
 | `regress` | Run regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 |
+| `read.table` | Read a dataset from `.txt` | `read.table(file='fev.txt', header=TRUE)` | Read in data from the file `fev.txt` and read in the first row of the dataset as the column names. | Discussion section 2, line 35 |
