--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -38,3 +38,5 @@ This document contains R commands that you have learned, as well as a descriptio
 | `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | 
 | `regress` | Run regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 |
 | `read.table` | Read a dataset from `.txt` | `read.table(file='fev.txt', header=TRUE)` | Read in data from the file `fev.txt` and read in the first row of the dataset as the column names. | Discussion section 2, line 35 |
+| `descrip` | Create table of descriptive stats | `descrip(fev)` \ `descrip(fev, strata=fev$smoker)` | Compute descriptive statistics for every variable in the `fev` dataset. \ Comupte descriptive statistics stratified by smoking status. | Discussion section 2, line 80 |
+| `legend` | Add a legend to your plot | `legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = 16)` | Put a legend in the top left corner of the plot, with two categories, Smoker and Nonsmoker, taking the colors red and blue, respectively. | Discussion section 2, line 216 |
